# bitter

./: Pipfile  README.md  bitter.py  setup.cfg
examples/: bitter-key  secrets.txt  secrets.txt.bitter
