[metadata]
name = bitter
version = attr: bitter.__version__
description =
    A command-line interface for the fernet authenticated encryption scheme.
long_description = file: README.md, LICENSE
keywords = fernet, encryption
license = The Unlicense

[options]
py_modules =
    bitter
install_requires =
    cryptography >= "1.3"
python_requires =
    >= "3.7"

[options.entry_points]
console_scripts =
    bitter = bitter:main
